@@ -1,6 +1,6 @@
 {
   "id": "channel.nos",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "textures": {
     "channel.nos.nos2010/nosfanart.jpg": "7397f29df1f86111c076cdcd015173a1",
     "channel.nos.nos2010/nosfanart2.jpg": "8baf9e12664ac0dec783773a11fb32bb",
